-prok_pipeline: removed hmmpfam RFAM config and also fixed consistency in config files with current release
-parse_evidence and p_func: added to correct section of the install file (previously only in _last section)
-added bsml_qc component
-added overlap_analysis component
-added lipop component

ergatis-v2r10b1
---------------
-changes to some C source to support GCC 4.3
-genewise: gave each prepare_for_genewise_best_loc its own stdout and stderr; no longer complains about missing protein fasta files when no hits pass the filter.
-bsml2fasta: added option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files
-j_ortholog_clusters: added option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files
-enzyme2obo.pl: added to convert EC -> OBO
-chado2bsml: back to functionality after long neglect - evidence still needs work
-jaccard: added percent coverage cutoff, option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files
-pangenome: replaced by pangenome_blast_parse, pangenome_do_analysis, pangenome_make_graphs components
-interface: stderr and stdout files now viewable via interface (instead of just paths)
-pipeline builder: component definitions can now have enumerated lists that become select boxes
-pipeline builder: now shows 10 recently-defined inputs
-ergatis.ini: added data placement support for local file storage on compute clouds
-interface: component viewer now shows HTC ID and log file for submitted jobs
-interface: added 'clone pipeline' links on appropriate pages
-repeat2legacydb.pl: now allows 'tandem_repeat's to be loaded from trf
-prokaryotic_pipeline: removed wu-blastn against RNA database and bsml2tbl components
-prokaryotic_pipeline: added RNAmmer to prok pipeline
-prokaryotic_pipeline: added new p_func component to prok pipeline
-parse_evidence: added parse_evidence component (used to generate inputs for p_func)
-p_func: added p_func component