@@ -1,0 +1,51 @@
+[interface]
+classification = functional prediction
+
+[parameters]
+$;BLAST2GO_INSTALL$; = 
+$;CONFIG_FILE$; = $;BLAST2GO_INSTALL$;/b2gPipe.properties
+
+[input]
+;; should be output from an ncbi-blastx run (using the -m 7 option for xml output)
+;; use the raw output
+$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE$; = 
+$;INPUT_DIRECTORY$; = 
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = raw
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;OUTPUT_ANNOTATION_FILE$; = $;OUTPUT_DIRECTORY$;/blast2go.annot
+$;RAW_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.raw.list
+
+[component]
+$;COMPONENT_NAME$; = blast2go
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = 2.0
+$;RELEASE_TAG$; = $Name$
+$;REVISION$;            = $Revision: 4680 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; = 
+$;COMPONENT_XML$; = 
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; = 
+
+[include]
+$;PROJECT_CONFIG$;=
+
+
